--- a/CSS/testimonial.css
+++ b/CSS/testimonial.css
@@ -116,6 +116,9 @@ main {
   overflow-y: auto;
   box-shadow: 0 0 10px -6px hsl(219deg, 29%, 14%);
 }
+.section::-webkit-scrollbar {
+  width: 8px;
+}
 .section h1 {
   font-size: 1rem;
   line-height: 1.5rem;
